feat: update resources

--- a/3_intermediate/1.1.architecture.md
+++ b/3_intermediate/1.1.architecture.md
@@ -1,13 +1,12 @@
 # Node Architecture
 
-- containers in a `pod` can communicate with each other using localhost and target `port` number
+- containers in a `pod` can communicate with each other using `localhost` and target `port` number
 
-- pods in a cluster can also communicate with each other but it should goes throw the network
+- pods in a cluster can also communicate with each other but it should goes throw the 
+network and `service discovery`
 
 - `kube-proxy` will feed the `ip-tables` by giving it the information about what pods are
 running on this node and `ip-tables` acts like a firewall that can route the traffic also
 it make sure the pods are routable inside the cluster
 
 - the load-balancer will route the traffic to our cluster
-
-
