--- a/3_intermediate/2.rc.md
+++ b/3_intermediate/2.rc.md
@@ -2,8 +2,10 @@
 
 - you can scale stateless applications horizontly
 
-- stateless means application doesn't have any state and it doesn't write any
-local files
+- stateless means application doesn't have any state and it doesn't write any local files
+
+- all traditional databases are stateful and we can run them in a single container and
+`vertically` scale that by allocating CPU, memory, disk and ... .
 
 - most web apps can be made stateless and session managment part needs to be done outside
 of the container and files shouldn't be saved locally on the container and we should use
