feat: update lifecycle

--- a/3_intermediate/3.1.deployment.md
+++ b/3_intermediate/3.1.deployment.md
@@ -3,3 +3,5 @@
 - it gives you more possibilities to manage k8s resources like Creating, Updating,
 rolling-updates (zero downtime), roll-back to previous versions, pause/resume a
 deployment
+
+- you can manage the lifecycle of the app lot better rather than rc or rs.
