--- a/3_intermediate/4.1.services.md
+++ b/3_intermediate/4.1.services.md
@@ -1,6 +1,6 @@
 # Services
 
-- pods are dynamic means they can come and terminate in the cluster
+- pods are dynamic, means they can come and terminated in the cluster
 
 - when using RC, pods are terminated and created during scaling operations
 
@@ -9,7 +9,7 @@ and new pods take the place of older pods.
 
 - so pods should be accessed via a service
 
-- service is the logical-bridge between the pods and other services or end-users
+- `service` is the logical-bridge between the pods and other services or end-users
 
 - creating a service will create an endpoint for your pod(s):
     - `ClusterIp`: virtual Ip reachable inside the cluster
@@ -18,12 +18,11 @@ and new pods take the place of older pods.
         on the NodePort (ELB on AWS)
 
 - there is also possibility to use `DNS names`
-    - external-name can provide a DNS name for the service like
-        service discovery useing DNS
+    - external-name can provide a DNS name for the service like service discovery useing DNS
     - only works when `DNS add-on` is enabled
 
 - by default service can only run between ports 30000-32767 but you could change this behavior
-by addng the --service-node-port-range arg to the `kube-apiserver`
+by addng the --service-node-port-range arg to the `kube-apiserver` (init script of master node)
 
 - service will automatically assign a random port to the NodePort but you can assign port
 manually by `nodePort` option (handle collisions manually)
