--- a/3_intermediate/6.healthchecks.md
+++ b/3_intermediate/6.healthchecks.md
@@ -6,7 +6,9 @@ not restart.
 - we should always expose health check to outside to check availability and 
 resiliency of the app.
 
-- we have two type of health checks: via `command` or `URL`
+- we have 2 type of health checks:
+    - `command`: running a command in the container periodically
+    - `URL`: periodic checks on a URL
 
 ## livenessProbes
 
@@ -16,9 +18,9 @@ resiliency of the app.
 
 ## readinessProbes
 
-> indicates whether the container is ready to server requests
+> indicates whether at the startup, the pod only recieve traffic when the tests succeeds
 
 - if the check fails, the container will not be restarted, but the Pod's IP
 address will be removed from the service, so it'll not serve any requests more.
 
-- the pod will be ready only after readinessProbe sucess signal. 
+- the pod will be ready only after readinessProbe sucess signal.
