--- a/3_intermediate/9.secrets.md
+++ b/3_intermediate/9.secrets.md
@@ -1,10 +1,11 @@
 # Secrets
 
-- provides a way in k8s to disttribute credentials, keys, passwords or any secret data
+- provides a way in k8s to disttribute credentials, keys, passwords or any secret data to the pods.
 
-- k8s internally uses this secrets to provide the credentials to access the internal API
+- k8s internally uses this secrets to provide the credentials to access the internal API in the
+`/var/run/secrets/kubernetes.io/serviceaccount`
 
-- secrets is only one way to provide secrets, native to k8s and there are still other ways
+- secrets (k8s's secret) is only one way to provide secrets, native to k8s and there are still other ways
 your container can get secrets like external `vault` service
 
 ## using secrets
@@ -14,54 +15,20 @@ your container can get secrets like external `vault` service
 2. use secrets as a file in a pod
     - it uses volumes to be mounted in a container
     - in this volume you have files
-    - can be used for instance for `dotenv` filesor your app can just read this file
+    - can be used for instance for `dotenv` files or your app can just read this file
 
 3. use an external image to pull secrets (from private image-registry)
 
-## create secrets
+## generate secrets (files)
 
 1. using command-line
 
-``` zsh
-echo -n "root" > ./usename.txt
-echo -n "password" > ./password.txt
-kubectl create secret generic db-user-pass --from-file=./username.txt --from-file=./password.txt
-```
-
-2. using yaml file
-    - you should put `base64` encoded values
+2. using yaml (`base64` encoded values)
 
 ## use secrets
 
-1. you can create a pod that exposes the secrets as environment variables
+1. create a pod that exposes the secrets as environment variables
 
-``` yaml
-#...
-env:
-    - name: SECRET_USENAME
-    valueFrom:
-        secretKeyRef:
-            name: db-secret
-            key: username
-    - name: SECRET_PASSWORD
-    # ...
-# ...
-```
-
-2. provide it in a file:
+2. provide it as a file:
 
 - the dafault k8s uses this mechanism to provide secrets
-
-``` yaml
-# pod or deployment spec ...
-    # containers spec ...
-    VolumeMounts:
-    - name: credVolume
-    mountPath: /etc/creds
-    readOnly: true
-volumes:
-    - name: credVolume
-    secret:
-        secretName: db-secrets
-# ...
-```
