feat: update learning

--- a/3_intermediate/5.labels.md
+++ b/3_intermediate/5.labels.md
@@ -9,7 +9,16 @@
 - `Label Selectors`: we attache them to objects to narrow down the results also
 we can use `matching expressions` to match labels
 
-## run a pod on specific nodes:
+- simple `key:value` for identifying and describing objects or
+resource later by selecting, grouping and filtering
+
+- examples: `tier:fontend`, `app:api`, `env:prod` and ... .
+
+- filter a get command: `kubectl get pods -l app=nginx` which will
+applied only on maching labels
+
+## run a pod on specific nodes
+
 1. tag the node
 
     ``` zsh
@@ -17,3 +26,17 @@ we can use `matching expressions` to match labels
     ```
 
 2. using `noodeSelector` to let pod only run on them
+
+### selector
+
+> how one object finds the resources that it wants to talk to
+> or do something with it. ex: a service needs to talk to pods
+> so it needs to find a way to get those and it uses selectors
+> as essentially as pattern matching to match the labels the
+> keys and values there
+
+- the `glue` telling `Service`s and `Deployment`s which pods are theirs
+
+- selector are used to link resource dependencies
+
+- use labels and selectors to control which pods go to which nodes
