feat: update others

--- a/2_basics/7.others.md
+++ b/2_basics/7.others.md
@@ -1,8 +1,11 @@
+# Others
+
 ## kubectl apply
 
 - it's the way we run declarative objects
 
 - it's used for create/update resource:
+
     ```zsh
     # file
     kubectl apply -f file.yaml
@@ -39,18 +42,22 @@ the very begining of the line which are:
 ## build yaml files
 
 ### kubectl api-resources
+
 > get list of k8s resource objects and their relative `kind`
 
 ### kubectl api-version
+
 > get list of k8s versioning
 
 - the first thing to create a YAML is to find out which `kind` and
 `apiVersion` match together.
 
 ### metadata
+
 > only name of resource you want to create is required
 
 ### spec
+
 > where all the actions is at! and it's different based on the type
 > of resource you want to create it
 
@@ -59,15 +66,19 @@ the very begining of the line which are:
 ### [official kubernetes docs](https://kubernetes.io/docs/reference/)
 
 ### kubectl explain services --recursive
+
 > get all the keys each kind support
 
 ### kubectl explain services.spec
+
 > get all the spec keys with description 
 
 ### kubectl explain services.spec.type
+
 > get all the spec keys related to type with description 
 
 ### kubectl explain deployment.spec.template.spec.volumes.nfs.server
+
 > get sub-spec keys
 
 ## dry-run and diff
@@ -75,22 +86,26 @@ the very begining of the line which are:
 - `dry-run a create` is only on client side
 
 ### dry-run on client side
+
 ``` zsh
 kubectl apply -f 2.4.app.yaml --dry-run
 ```
 
 ### dry-run on server side
+
 ``` zsh
 kubectl apply -f 2.4.app.yaml --server-dry-run
 ```
 
 ### apply it on server and dry-run on server side
+
 ``` zsh
 kubectl apply -f 2.4.app.yaml
 kubectl apply -f 2.4.app.yaml --server-dry-run
 ```
 
 ### see difference between pre apply and current (changes)
+
 ``` zsh
 kubectl diff -f 2.4.app.yaml
 ```
