feat: add svc discovery

--- a/4_advanced/1.service-discovery.md
+++ b/4_advanced/1.service-discovery.md
@@ -4,10 +4,10 @@
 
 - the `addon` are in the `/etc/kubernetes/addons` directory on `master` node
 
-- DNS service will be used within pods to find other services running on the same cluster
+- DNS service can be used within pods to find other services running on the same cluster
 
 - multiple containers in a pod don't need this service as they can contact each other
-directly under the same wing via localhost
+directly under the same wing via localhost:port (only port should be known)
 
 - (important) to make DNS work, pods need service definition
 
@@ -18,7 +18,7 @@ doing a `host service-name.default`, the default here means default namespace.
 - (intersting), if you run a `busybox` as a testing container and do `cat /etc/resolv.conf`
 you will then see `nameserver 10.0.0.10` which points to the `dns-server` which behind the
 scene is the default dns-server in k8s, it points to a pod named `kube-dns` which k8s built
-it in `kube-system` namespace. 
+it in `kube-system` namespace.
 
 ## DEMO ooooooooo
 
@@ -66,6 +66,3 @@ it in `kube-system` namespace.
         ```
     
     - so in the cluster you can see `services` are `host-names` or `domains`
-
-
-
