--- a/4_advanced/3.ingress.md
+++ b/4_advanced/3.ingress.md
@@ -1,4 +1,4 @@
-## Ingress
+# Ingress
 
 - it's a solution since k8s 1.1 that allows inound connections to the cluster
 
@@ -7,4 +7,4 @@ expose services that need to be accessible from outside to the cluster
 
 - with ingress you can run your own ingress controller with k8s cluster
 
-- there are ingress controllers available but you can write your own as well 
+- there are ingress controllers available but you can write your own as well
