feat: add nginx sample

--- a/4_advanced/1.service-discovery.md
+++ b/4_advanced/1.service-discovery.md
@@ -8,8 +8,9 @@
 
 - multiple containers in a pod don't need this service as they can contact each other
 directly under the same wing via localhost:port (only port should be known)
+means they are on the same subnet
 
-- (important) to make DNS work, pods need service definition
+- (important) to make `DNS work`, pods need `service` definition
 
 - service discovery uses the name of the service to find ip address of the pod, also
 the built-in service discovery can do a `dns lookup` to find out ip of other pods by
@@ -17,8 +18,8 @@ doing a `host service-name.default`, the default here means default namespace.
 
 - (intersting), if you run a `busybox` as a testing container and do `cat /etc/resolv.conf`
 you will then see `nameserver 10.0.0.10` which points to the `dns-server` which behind the
-scene is the default dns-server in k8s, it points to a pod named `kube-dns` which k8s built
-it in `kube-system` namespace.
+scene is the default dns-server in k8s, it points to a pod named `kube-dns` which is built
+in the `kube-system` namespace.
 
 ## DEMO ooooooooo
 
