--- a/4_advanced/2.config-map.md
+++ b/4_advanced/2.config-map.md
@@ -3,9 +3,9 @@
 - config parameters that are not secret, can be put in a configMap
 
 - it's key-value pairs that can be read via:
-    - container commandline arguments
-    - volumes
-    - environment variables
+    1. container commandline arguments
+    2. volumes
+    3. environment variables
 
 - it can slso contain full configuration files like webserver config file
 
@@ -38,12 +38,7 @@ the container itself.
     ``` yaml
     # ...
         # ...
-        env:
-            - name: DRIVER
-                valueFrom:
-                    configMapKeyRef:
-                        name: app-config
-                        key: driver
+
             # ... other envs
     ```
 
