--- a/1_installation/1.kubernetes.md
+++ b/1_installation/1.kubernetes.md
@@ -1,5 +1,7 @@
-## kubernetes
+# Kubernetes
 
-- [kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/)
+## [kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/)
+
+- [install using native package management](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/#install-using-native-package-management)
 
 
