--- a/4_advanced/1.service-discovery.md
+++ b/4_advanced/1.service-discovery.md
@@ -1,8 +1,8 @@
 # DNS
 
-- as k8s 1.3, DNS is a built-in `service` launched automatically using `addon` manager
+- as k8s 1.3, DNS is a built-in `service` launched automatically using `addons` manager
 
-- the `addon` are in the `/etc/kubernetes/addons` directory on `master` node
+- the `addons` are in the `/etc/kubernetes/addons` directory on `master` node
 
 - DNS service can be used within pods to find other services running on the same cluster
 
