--- a/4_advanced/3.ingress.md
+++ b/4_advanced/3.ingress.md
@@ -2,9 +2,9 @@
 
 - it's a solution since k8s 1.1 that allows inound connections to the cluster
 
-- it's an alternative to external LoadBalancer and NodePort which allows easily
-expose services that need to be accessible from outside to the cluster
+- it's an alternative to `external LoadBalancer` and `NodePort` which allows easily
+expose `services` that need to be accessible from outside to the cluster
 
-- with ingress you can run your own ingress controller with k8s cluster
+- with ingress you can run your own ingress controller (LB) within the k8s cluster
 
 - there are ingress controllers available but you can write your own as well
