--- a/1_installation/1.kubernetes.md
+++ b/1_installation/1.kubernetes.md
@@ -2,6 +2,6 @@
 
 ## [kubectl](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/)
 
-- [install using native package management](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/#install-using-native-package-management)
+- [install using binary](https://kubernetes.io/docs/tasks/tools/install-kubectl-linux/#install-kubectl-binary-with-curl-on-linux)
 
 
