--- a/1_installation/2.utilities.md
+++ b/1_installation/2.utilities.md
@@ -2,7 +2,7 @@
 
 ## [helm](https://helm.sh)
 
-- [install via helm repository](https://helm.sh/docs/intro/install/#from-apt-debianubuntu)
+- [install via script(installing the binary locally)](https://helm.sh/docs/intro/install/#from-script)
 
 ## [oc (openshift CLI)](https://docs.okd.io/4.9/welcome/index.html)
 
