--- a/1_installation/2.utilities.md
+++ b/1_installation/2.utilities.md
@@ -6,6 +6,7 @@
 
 ## [oc (openshift CLI)](https://docs.okd.io/4.9/welcome/index.html)
 
-- [install via binary](https://access.redhat.com/downloads/content/290)
+- [install via binary (option 1)](https://console.redhat.com/openshift/downloads)
+- [install via binary (option 2)](https://dsri.maastrichtuniversity.nl/docs/openshift-install/)
 
 ## [minikube](https://github.com/kubernetes/minikube)
